// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Plots-CalendarChart 1.0日历图 1`] = `
Object {
  "animation": true,
  "appendPadding": Array [
    44,
    5,
    10,
    10,
  ],
  "autoFit": undefined,
  "color": "#BAE7FF-#1890FF-#0050B3",
  "colorField": "commits",
  "colors": "#BAE7FF-#1890FF-#0050B3",
  "data": Array [
    Object {
      "commits": 1,
      "date": "2017-05-01",
      "day": 1,
      "month": 4,
      "week": "0",
    },
    Object {
      "commits": 1,
      "date": "2017-05-02",
      "day": 2,
      "month": 4,
      "week": "0",
    },
    Object {
      "commits": 1,
      "date": "2017-05-03",
      "day": 3,
      "month": 4,
      "week": "0",
    },
    Object {
      "commits": 1,
      "date": "2017-05-04",
      "day": 4,
      "month": 4,
      "week": "0",
    },
    Object {
      "commits": 1,
      "date": "2017-05-05",
      "day": 5,
      "month": 4,
      "week": "0",
    },
    Object {
      "commits": 1,
      "date": "2017-05-06",
      "day": 6,
      "month": 4,
      "week": "0",
    },
    Object {
      "commits": 1,
      "date": "2017-05-07",
      "day": 0,
      "month": 4,
      "week": "1",
    },
    Object {
      "commits": 1,
      "date": "2017-05-08",
      "day": 1,
      "month": 4,
      "week": "1",
    },
    Object {
      "commits": 1,
      "date": "2017-05-09",
      "day": 2,
      "month": 4,
      "week": "1",
    },
    Object {
      "commits": 1,
      "date": "2017-05-10",
      "day": 3,
      "month": 4,
      "week": "1",
    },
    Object {
      "commits": 1,
      "date": "2017-05-11",
      "day": 4,
      "month": 4,
      "week": "1",
    },
    Object {
      "commits": 1,
      "date": "2017-05-12",
      "day": 5,
      "month": 4,
      "week": "1",
    },
    Object {
      "commits": 1,
      "date": "2017-05-13",
      "day": 6,
      "month": 4,
      "week": "1",
    },
    Object {
      "commits": 1,
      "date": "2017-05-14",
      "day": 0,
      "month": 4,
      "week": "2",
    },
    Object {
      "commits": 1,
      "date": "2017-05-15",
      "day": 1,
      "month": 4,
      "week": "2",
    },
    Object {
      "commits": 1,
      "date": "2017-05-16",
      "day": 2,
      "month": 4,
      "week": "2",
    },
    Object {
      "commits": 1,
      "date": "2017-05-17",
      "day": 3,
      "month": 4,
      "week": "2",
    },
    Object {
      "commits": 1,
      "date": "2017-05-18",
      "day": 4,
      "month": 4,
      "week": "2",
    },
    Object {
      "commits": 1,
      "date": "2017-05-19",
      "day": 5,
      "month": 4,
      "week": "2",
    },
    Object {
      "commits": 1,
      "date": "2017-05-20",
      "day": 6,
      "month": 4,
      "week": "2",
    },
    Object {
      "commits": 1,
      "date": "2017-05-21",
      "day": 0,
      "month": 4,
      "week": "3",
    },
    Object {
      "commits": 1,
      "date": "2017-05-22",
      "day": 1,
      "month": 4,
      "week": "3",
    },
    Object {
      "commits": 1,
      "date": "2017-05-23",
      "day": 2,
      "month": 4,
      "week": "3",
    },
    Object {
      "commits": 1,
      "date": "2017-05-24",
      "day": 3,
      "month": 4,
      "week": "3",
    },
    Object {
      "commits": 1,
      "date": "2017-05-25",
      "day": 4,
      "lastWeek": true,
      "month": 4,
      "week": "3",
    },
    Object {
      "commits": 1,
      "date": "2017-05-26",
      "day": 5,
      "lastWeek": true,
      "month": 4,
      "week": "3",
    },
    Object {
      "commits": 1,
      "date": "2017-05-27",
      "day": 6,
      "lastWeek": true,
      "month": 4,
      "week": "3",
    },
    Object {
      "commits": 1,
      "date": "2017-05-28",
      "day": 0,
      "lastWeek": true,
      "month": 4,
      "week": "4",
    },
    Object {
      "commits": 1,
      "date": "2017-05-29",
      "day": 1,
      "lastWeek": true,
      "month": 4,
      "week": "4",
    },
    Object {
      "commits": 1,
      "date": "2017-05-30",
      "day": 2,
      "lastWeek": true,
      "month": 4,
      "week": "4",
    },
    Object {
      "commits": 1,
      "date": "2017-05-31",
      "day": 3,
      "lastDay": true,
      "lastWeek": true,
      "month": 4,
      "week": "4",
    },
    Object {
      "commits": 1,
      "date": "2017-06-01",
      "day": 4,
      "month": 5,
      "week": "4",
    },
    Object {
      "commits": 1,
      "date": "2017-06-02",
      "day": 5,
      "month": 5,
      "week": "4",
    },
    Object {
      "commits": 1,
      "date": "2017-06-03",
      "day": 6,
      "month": 5,
      "week": "4",
    },
    Object {
      "commits": 1,
      "date": "2017-06-04",
      "day": 0,
      "month": 5,
      "week": "5",
    },
    Object {
      "commits": 1,
      "date": "2017-06-05",
      "day": 1,
      "month": 5,
      "week": "5",
    },
    Object {
      "commits": 1,
      "date": "2017-06-06",
      "day": 2,
      "month": 5,
      "week": "5",
    },
    Object {
      "commits": 1,
      "date": "2017-06-07",
      "day": 3,
      "month": 5,
      "week": "5",
    },
    Object {
      "commits": 1,
      "date": "2017-06-08",
      "day": 4,
      "month": 5,
      "week": "5",
    },
    Object {
      "commits": 1,
      "date": "2017-06-09",
      "day": 5,
      "month": 5,
      "week": "5",
    },
    Object {
      "commits": 1,
      "date": "2017-06-10",
      "day": 6,
      "month": 5,
      "week": "5",
    },
    Object {
      "commits": 1,
      "date": "2017-06-11",
      "day": 0,
      "month": 5,
      "week": "6",
    },
    Object {
      "commits": 1,
      "date": "2017-06-12",
      "day": 1,
      "month": 5,
      "week": "6",
    },
    Object {
      "commits": 1,
      "date": "2017-06-13",
      "day": 2,
      "month": 5,
      "week": "6",
    },
    Object {
      "commits": 1,
      "date": "2017-06-14",
      "day": 3,
      "month": 5,
      "week": "6",
    },
    Object {
      "commits": 1,
      "date": "2017-06-15",
      "day": 4,
      "month": 5,
      "week": "6",
    },
    Object {
      "commits": 1,
      "date": "2017-06-16",
      "day": 5,
      "month": 5,
      "week": "6",
    },
    Object {
      "commits": 1,
      "date": "2017-06-17",
      "day": 6,
      "month": 5,
      "week": "6",
    },
    Object {
      "commits": 1,
      "date": "2017-06-18",
      "day": 0,
      "month": 5,
      "week": "7",
    },
    Object {
      "commits": 1,
      "date": "2017-06-19",
      "day": 1,
      "month": 5,
      "week": "7",
    },
    Object {
      "commits": 1,
      "date": "2017-06-20",
      "day": 2,
      "month": 5,
      "week": "7",
    },
    Object {
      "commits": 2,
      "date": "2017-06-21",
      "day": 3,
      "month": 5,
      "week": "7",
    },
    Object {
      "commits": 6,
      "date": "2017-06-22",
      "day": 4,
      "month": 5,
      "week": "7",
    },
    Object {
      "commits": 9,
      "date": "2017-06-23",
      "day": 5,
      "month": 5,
      "week": "7",
    },
    Object {
      "commits": 3,
      "date": "2017-06-24",
      "day": 6,
      "lastWeek": true,
      "month": 5,
      "week": "7",
    },
    Object {
      "commits": 3,
      "date": "2017-06-25",
      "day": 0,
      "lastWeek": true,
      "month": 5,
      "week": "8",
    },
    Object {
      "commits": 1,
      "date": "2017-06-26",
      "day": 1,
      "lastWeek": true,
      "month": 5,
      "week": "8",
    },
    Object {
      "commits": 7,
      "date": "2017-06-27",
      "day": 2,
      "lastWeek": true,
      "month": 5,
      "week": "8",
    },
    Object {
      "commits": 7,
      "date": "2017-06-28",
      "day": 3,
      "lastWeek": true,
      "month": 5,
      "week": "8",
    },
    Object {
      "commits": 12,
      "date": "2017-06-29",
      "day": 4,
      "lastWeek": true,
      "month": 5,
      "week": "8",
    },
    Object {
      "commits": 9,
      "date": "2017-06-30",
      "day": 5,
      "lastDay": true,
      "lastWeek": true,
      "month": 5,
      "week": "8",
    },
    Object {
      "commits": 4,
      "date": "2017-07-01",
      "day": 6,
      "month": 6,
      "week": "8",
    },
    Object {
      "commits": 1,
      "date": "2017-07-02",
      "day": 0,
      "month": 6,
      "week": "9",
    },
    Object {
      "commits": 2,
      "date": "2017-07-03",
      "day": 1,
      "month": 6,
      "week": "9",
    },
    Object {
      "commits": 7,
      "date": "2017-07-04",
      "day": 2,
      "month": 6,
      "week": "9",
    },
    Object {
      "commits": 6,
      "date": "2017-07-05",
      "day": 3,
      "month": 6,
      "week": "9",
    },
    Object {
      "commits": 1,
      "date": "2017-07-06",
      "day": 4,
      "month": 6,
      "week": "9",
    },
    Object {
      "commits": 6,
      "date": "2017-07-07",
      "day": 5,
      "month": 6,
      "week": "9",
    },
    Object {
      "commits": 1,
      "date": "2017-07-08",
      "day": 6,
      "month": 6,
      "week": "9",
    },
    Object {
      "commits": 1,
      "date": "2017-07-09",
      "day": 0,
      "month": 6,
      "week": "10",
    },
    Object {
      "commits": 1,
      "date": "2017-07-10",
      "day": 1,
      "month": 6,
      "week": "10",
    },
    Object {
      "commits": 8,
      "date": "2017-07-11",
      "day": 2,
      "month": 6,
      "week": "10",
    },
    Object {
      "commits": 5,
      "date": "2017-07-12",
      "day": 3,
      "month": 6,
      "week": "10",
    },
    Object {
      "commits": 7,
      "date": "2017-07-13",
      "day": 4,
      "month": 6,
      "week": "10",
    },
    Object {
      "commits": 4,
      "date": "2017-07-14",
      "day": 5,
      "month": 6,
      "week": "10",
    },
    Object {
      "commits": 4,
      "date": "2017-07-15",
      "day": 6,
      "month": 6,
      "week": "10",
    },
    Object {
      "commits": 2,
      "date": "2017-07-16",
      "day": 0,
      "month": 6,
      "week": "11",
    },
    Object {
      "commits": 1,
      "date": "2017-07-17",
      "day": 1,
      "month": 6,
      "week": "11",
    },
    Object {
      "commits": 10,
      "date": "2017-07-18",
      "day": 2,
      "month": 6,
      "week": "11",
    },
    Object {
      "commits": 14,
      "date": "2017-07-19",
      "day": 3,
      "month": 6,
      "week": "11",
    },
    Object {
      "commits": 6,
      "date": "2017-07-20",
      "day": 4,
      "month": 6,
      "week": "11",
    },
    Object {
      "commits": 1,
      "date": "2017-07-21",
      "day": 5,
      "month": 6,
      "week": "11",
    },
    Object {
      "commits": 6,
      "date": "2017-07-22",
      "day": 6,
      "month": 6,
      "week": "11",
    },
    Object {
      "commits": 1,
      "date": "2017-07-23",
      "day": 0,
      "month": 6,
      "week": "12",
    },
    Object {
      "commits": 1,
      "date": "2017-07-24",
      "day": 1,
      "month": 6,
      "week": "12",
    },
    Object {
      "commits": 1,
      "date": "2017-07-25",
      "day": 2,
      "lastWeek": true,
      "month": 6,
      "week": "12",
    },
    Object {
      "commits": 1,
      "date": "2017-07-26",
      "day": 3,
      "lastWeek": true,
      "month": 6,
      "week": "12",
    },
    Object {
      "commits": 9,
      "date": "2017-07-27",
      "day": 4,
      "lastWeek": true,
      "month": 6,
      "week": "12",
    },
    Object {
      "commits": 1,
      "date": "2017-07-28",
      "day": 5,
      "lastWeek": true,
      "month": 6,
      "week": "12",
    },
    Object {
      "commits": 15,
      "date": "2017-07-29",
      "day": 6,
      "lastWeek": true,
      "month": 6,
      "week": "12",
    },
    Object {
      "commits": 1,
      "date": "2017-07-30",
      "day": 0,
      "lastWeek": true,
      "month": 6,
      "week": "13",
    },
    Object {
      "commits": 1,
      "date": "2017-07-31",
      "day": 1,
      "lastDay": true,
      "lastWeek": true,
      "month": 6,
      "week": "13",
    },
    Object {
      "commits": 15,
      "date": "2017-08-01",
      "day": 2,
      "month": 7,
      "week": "13",
    },
    Object {
      "commits": 11,
      "date": "2017-08-02",
      "day": 3,
      "month": 7,
      "week": "13",
    },
    Object {
      "commits": 3,
      "date": "2017-08-03",
      "day": 4,
      "month": 7,
      "week": "13",
    },
    Object {
      "commits": 6,
      "date": "2017-08-04",
      "day": 5,
      "month": 7,
      "week": "13",
    },
    Object {
      "commits": 1,
      "date": "2017-08-05",
      "day": 6,
      "month": 7,
      "week": "13",
    },
    Object {
      "commits": 4,
      "date": "2017-08-06",
      "day": 0,
      "month": 7,
      "week": "14",
    },
    Object {
      "commits": 1,
      "date": "2017-08-07",
      "day": 1,
      "month": 7,
      "week": "14",
    },
    Object {
      "commits": 10,
      "date": "2017-08-08",
      "day": 2,
      "month": 7,
      "week": "14",
    },
    Object {
      "commits": 11,
      "date": "2017-08-09",
      "day": 3,
      "month": 7,
      "week": "14",
    },
    Object {
      "commits": 8,
      "date": "2017-08-10",
      "day": 4,
      "month": 7,
      "week": "14",
    },
    Object {
      "commits": 12,
      "date": "2017-08-11",
      "day": 5,
      "month": 7,
      "week": "14",
    },
    Object {
      "commits": 8,
      "date": "2017-08-12",
      "day": 6,
      "month": 7,
      "week": "14",
    },
    Object {
      "commits": 2,
      "date": "2017-08-13",
      "day": 0,
      "month": 7,
      "week": "15",
    },
    Object {
      "commits": 1,
      "date": "2017-08-14",
      "day": 1,
      "month": 7,
      "week": "15",
    },
    Object {
      "commits": 18,
      "date": "2017-08-15",
      "day": 2,
      "month": 7,
      "week": "15",
    },
    Object {
      "commits": 21,
      "date": "2017-08-16",
      "day": 3,
      "month": 7,
      "week": "15",
    },
    Object {
      "commits": 7,
      "date": "2017-08-17",
      "day": 4,
      "month": 7,
      "week": "15",
    },
    Object {
      "commits": 10,
      "date": "2017-08-18",
      "day": 5,
      "month": 7,
      "week": "15",
    },
    Object {
      "commits": 8,
      "date": "2017-08-19",
      "day": 6,
      "month": 7,
      "week": "15",
    },
    Object {
      "commits": 1,
      "date": "2017-08-20",
      "day": 0,
      "month": 7,
      "week": "16",
    },
    Object {
      "commits": 1,
      "date": "2017-08-21",
      "day": 1,
      "month": 7,
      "week": "16",
    },
    Object {
      "commits": 1,
      "date": "2017-08-22",
      "day": 2,
      "month": 7,
      "week": "16",
    },
    Object {
      "commits": 7,
      "date": "2017-08-23",
      "day": 3,
      "month": 7,
      "week": "16",
    },
    Object {
      "commits": 11,
      "date": "2017-08-24",
      "day": 4,
      "month": 7,
      "week": "16",
    },
    Object {
      "commits": 3,
      "date": "2017-08-25",
      "day": 5,
      "lastWeek": true,
      "month": 7,
      "week": "16",
    },
    Object {
      "commits": 3,
      "date": "2017-08-26",
      "day": 6,
      "lastWeek": true,
      "month": 7,
      "week": "16",
    },
    Object {
      "commits": 1,
      "date": "2017-08-27",
      "day": 0,
      "lastWeek": true,
      "month": 7,
      "week": "17",
    },
    Object {
      "commits": 2,
      "date": "2017-08-28",
      "day": 1,
      "lastWeek": true,
      "month": 7,
      "week": "17",
    },
    Object {
      "commits": 7,
      "date": "2017-08-29",
      "day": 2,
      "lastWeek": true,
      "month": 7,
      "week": "17",
    },
    Object {
      "commits": 20,
      "date": "2017-08-30",
      "day": 3,
      "lastWeek": true,
      "month": 7,
      "week": "17",
    },
    Object {
      "commits": 15,
      "date": "2017-08-31",
      "day": 4,
      "lastDay": true,
      "lastWeek": true,
      "month": 7,
      "week": "17",
    },
    Object {
      "commits": 1,
      "date": "2017-09-01",
      "day": 5,
      "month": 8,
      "week": "17",
    },
    Object {
      "commits": 4,
      "date": "2017-09-02",
      "day": 6,
      "month": 8,
      "week": "17",
    },
    Object {
      "commits": 1,
      "date": "2017-09-03",
      "day": 0,
      "month": 8,
      "week": "18",
    },
    Object {
      "commits": 1,
      "date": "2017-09-04",
      "day": 1,
      "month": 8,
      "week": "18",
    },
    Object {
      "commits": 8,
      "date": "2017-09-05",
      "day": 2,
      "month": 8,
      "week": "18",
    },
    Object {
      "commits": 6,
      "date": "2017-09-06",
      "day": 3,
      "month": 8,
      "week": "18",
    },
    Object {
      "commits": 5,
      "date": "2017-09-07",
      "day": 4,
      "month": 8,
      "week": "18",
    },
    Object {
      "commits": 1,
      "date": "2017-09-08",
      "day": 5,
      "month": 8,
      "week": "18",
    },
    Object {
      "commits": 25,
      "date": "2017-09-09",
      "day": 6,
      "month": 8,
      "week": "18",
    },
    Object {
      "commits": 1,
      "date": "2017-09-10",
      "day": 0,
      "month": 8,
      "week": "19",
    },
    Object {
      "commits": 1,
      "date": "2017-09-11",
      "day": 1,
      "month": 8,
      "week": "19",
    },
    Object {
      "commits": 1,
      "date": "2017-09-12",
      "day": 2,
      "month": 8,
      "week": "19",
    },
    Object {
      "commits": 9,
      "date": "2017-09-13",
      "day": 3,
      "month": 8,
      "week": "19",
    },
    Object {
      "commits": 1,
      "date": "2017-09-14",
      "day": 4,
      "month": 8,
      "week": "19",
    },
    Object {
      "commits": 1,
      "date": "2017-09-15",
      "day": 5,
      "month": 8,
      "week": "19",
    },
    Object {
      "commits": 4,
      "date": "2017-09-16",
      "day": 6,
      "month": 8,
      "week": "19",
    },
    Object {
      "commits": 1,
      "date": "2017-09-17",
      "day": 0,
      "month": 8,
      "week": "20",
    },
    Object {
      "commits": 1,
      "date": "2017-09-18",
      "day": 1,
      "month": 8,
      "week": "20",
    },
    Object {
      "commits": 4,
      "date": "2017-09-19",
      "day": 2,
      "month": 8,
      "week": "20",
    },
    Object {
      "commits": 8,
      "date": "2017-09-20",
      "day": 3,
      "month": 8,
      "week": "20",
    },
    Object {
      "commits": 10,
      "date": "2017-09-21",
      "day": 4,
      "month": 8,
      "week": "20",
    },
    Object {
      "commits": 9,
      "date": "2017-09-22",
      "day": 5,
      "month": 8,
      "week": "20",
    },
    Object {
      "commits": 5,
      "date": "2017-09-23",
      "day": 6,
      "month": 8,
      "week": "20",
    },
    Object {
      "commits": 1,
      "date": "2017-09-24",
      "day": 0,
      "lastWeek": true,
      "month": 8,
      "week": "21",
    },
    Object {
      "commits": 1,
      "date": "2017-09-25",
      "day": 1,
      "lastWeek": true,
      "month": 8,
      "week": "21",
    },
    Object {
      "commits": 1,
      "date": "2017-09-26",
      "day": 2,
      "lastWeek": true,
      "month": 8,
      "week": "21",
    },
    Object {
      "commits": 7,
      "date": "2017-09-27",
      "day": 3,
      "lastWeek": true,
      "month": 8,
      "week": "21",
    },
    Object {
      "commits": 13,
      "date": "2017-09-28",
      "day": 4,
      "lastWeek": true,
      "month": 8,
      "week": "21",
    },
    Object {
      "commits": 1,
      "date": "2017-09-29",
      "day": 5,
      "lastWeek": true,
      "month": 8,
      "week": "21",
    },
    Object {
      "commits": 7,
      "date": "2017-09-30",
      "day": 6,
      "lastWeek": true,
      "month": 8,
      "week": "21",
    },
    Object {
      "commits": 1,
      "date": "2017-10-01",
      "day": 0,
      "month": 9,
      "week": "22",
    },
    Object {
      "commits": 1,
      "date": "2017-10-02",
      "day": 1,
      "month": 9,
      "week": "22",
    },
    Object {
      "commits": 7,
      "date": "2017-10-03",
      "day": 2,
      "month": 9,
      "week": "22",
    },
    Object {
      "commits": 2,
      "date": "2017-10-04",
      "day": 3,
      "month": 9,
      "week": "22",
    },
    Object {
      "commits": 14,
      "date": "2017-10-05",
      "day": 4,
      "month": 9,
      "week": "22",
    },
    Object {
      "commits": 9,
      "date": "2017-10-06",
      "day": 5,
      "month": 9,
      "week": "22",
    },
    Object {
      "commits": 12,
      "date": "2017-10-07",
      "day": 6,
      "month": 9,
      "week": "22",
    },
    Object {
      "commits": 1,
      "date": "2017-10-08",
      "day": 0,
      "month": 9,
      "week": "23",
    },
    Object {
      "commits": 1,
      "date": "2017-10-09",
      "day": 1,
      "month": 9,
      "week": "23",
    },
    Object {
      "commits": 13,
      "date": "2017-10-10",
      "day": 2,
      "month": 9,
      "week": "23",
    },
    Object {
      "commits": 12,
      "date": "2017-10-11",
      "day": 3,
      "month": 9,
      "week": "23",
    },
    Object {
      "commits": 1,
      "date": "2017-10-12",
      "day": 4,
      "month": 9,
      "week": "23",
    },
    Object {
      "commits": 1,
      "date": "2017-10-13",
      "day": 5,
      "month": 9,
      "week": "23",
    },
    Object {
      "commits": 1,
      "date": "2017-10-14",
      "day": 6,
      "month": 9,
      "week": "23",
    },
    Object {
      "commits": 1,
      "date": "2017-10-15",
      "day": 0,
      "month": 9,
      "week": "24",
    },
    Object {
      "commits": 1,
      "date": "2017-10-16",
      "day": 1,
      "month": 9,
      "week": "24",
    },
    Object {
      "commits": 1,
      "date": "2017-10-17",
      "day": 2,
      "month": 9,
      "week": "24",
    },
    Object {
      "commits": 1,
      "date": "2017-10-18",
      "day": 3,
      "month": 9,
      "week": "24",
    },
    Object {
      "commits": 1,
      "date": "2017-10-19",
      "day": 4,
      "month": 9,
      "week": "24",
    },
    Object {
      "commits": 1,
      "date": "2017-10-20",
      "day": 5,
      "month": 9,
      "week": "24",
    },
    Object {
      "commits": 1,
      "date": "2017-10-21",
      "day": 6,
      "month": 9,
      "week": "24",
    },
    Object {
      "commits": 1,
      "date": "2017-10-22",
      "day": 0,
      "month": 9,
      "week": "25",
    },
    Object {
      "commits": 1,
      "date": "2017-10-23",
      "day": 1,
      "month": 9,
      "week": "25",
    },
    Object {
      "commits": 10,
      "date": "2017-10-24",
      "day": 2,
      "month": 9,
      "week": "25",
    },
    Object {
      "commits": 4,
      "date": "2017-10-25",
      "day": 3,
      "month": 9,
      "week": "25",
    },
    Object {
      "commits": 7,
      "date": "2017-10-26",
      "day": 4,
      "month": 9,
      "week": "25",
    },
    Object {
      "commits": 3,
      "date": "2017-10-27",
      "day": 5,
      "month": 9,
      "week": "25",
    },
    Object {
      "commits": 14,
      "date": "2017-10-28",
      "day": 6,
      "month": 9,
      "week": "25",
    },
    Object {
      "commits": 1,
      "date": "2017-10-29",
      "day": 0,
      "month": 9,
      "week": "26",
    },
    Object {
      "commits": 1,
      "date": "2017-10-30",
      "day": 1,
      "month": 9,
      "week": "26",
    },
    Object {
      "commits": 5,
      "date": "2017-10-31",
      "day": 2,
      "lastDay": true,
      "month": 9,
      "week": "26",
    },
  ],
  "dateField": "date",
  "dateRange": Array [
    "2017-05-01",
    "2017-10-31",
  ],
  "legend": false,
  "meta": Object {
    "day": Object {
      "type": "cat",
      "values": Array [
        "Sun.",
        "Mon.",
        "Tues.",
        "Wed.",
        "Thur.",
        "Fri.",
        "Sat.",
      ],
    },
    "week": Object {
      "type": "cat",
    },
  },
  "padding": "auto",
  "reflect": "y",
  "renderer": "canvas",
  "shape": "boundary-polygon",
  "type": "polygon",
  "valueField": "commits",
  "xAxis": Object {
    "grid": Object {
      "alignTick": false,
      "line": Object {
        "style": Object {
          "lineDash": null,
          "lineWidth": 1,
          "stroke": "#f0f0f0",
        },
      },
    },
    "label": Object {
      "autoHide": Object {
        "cfg": Object {
          "minGap": 6,
        },
        "type": "equidistance",
      },
      "autoRotate": false,
      "formatter": [Function],
      "offset": 20,
      "style": Object {
        "fill": "#bbb",
        "fontSize": 12,
        "textBaseline": "top",
      },
    },
    "line": null,
    "nice": true,
    "tickLine": null,
    "title": Object {
      "text": "月份",
    },
  },
  "xField": "week",
  "yAxis": Object {
    "grid": Object {
      "alignTick": false,
      "line": Object {
        "style": Object {
          "lineDash": null,
          "lineWidth": 1,
          "stroke": "#f0f0f0",
        },
      },
    },
    "label": Object {
      "autoHide": true,
      "autoRotate": false,
    },
    "nice": true,
    "title": null,
  },
  "yField": "day",
}
`;

exports[`Plots-CalendarChart 新版日历图 1`] = `
Object {
  "animation": true,
  "appendPadding": Array [
    44,
    5,
    10,
    10,
  ],
  "autoFit": undefined,
  "color": "#BAE7FF-#1890FF-#0050B3",
  "colorField": "commits",
  "data": Array [
    Object {
      "commits": 1,
      "date": "2017-05-01",
      "day": 1,
      "month": 4,
      "week": "0",
    },
    Object {
      "commits": 1,
      "date": "2017-05-02",
      "day": 2,
      "month": 4,
      "week": "0",
    },
    Object {
      "commits": 1,
      "date": "2017-05-03",
      "day": 3,
      "month": 4,
      "week": "0",
    },
    Object {
      "commits": 1,
      "date": "2017-05-04",
      "day": 4,
      "month": 4,
      "week": "0",
    },
    Object {
      "commits": 1,
      "date": "2017-05-05",
      "day": 5,
      "month": 4,
      "week": "0",
    },
    Object {
      "commits": 1,
      "date": "2017-05-06",
      "day": 6,
      "month": 4,
      "week": "0",
    },
    Object {
      "commits": 1,
      "date": "2017-05-07",
      "day": 0,
      "month": 4,
      "week": "1",
    },
    Object {
      "commits": 1,
      "date": "2017-05-08",
      "day": 1,
      "month": 4,
      "week": "1",
    },
    Object {
      "commits": 1,
      "date": "2017-05-09",
      "day": 2,
      "month": 4,
      "week": "1",
    },
    Object {
      "commits": 1,
      "date": "2017-05-10",
      "day": 3,
      "month": 4,
      "week": "1",
    },
    Object {
      "commits": 1,
      "date": "2017-05-11",
      "day": 4,
      "month": 4,
      "week": "1",
    },
    Object {
      "commits": 1,
      "date": "2017-05-12",
      "day": 5,
      "month": 4,
      "week": "1",
    },
    Object {
      "commits": 1,
      "date": "2017-05-13",
      "day": 6,
      "month": 4,
      "week": "1",
    },
    Object {
      "commits": 1,
      "date": "2017-05-14",
      "day": 0,
      "month": 4,
      "week": "2",
    },
    Object {
      "commits": 1,
      "date": "2017-05-15",
      "day": 1,
      "month": 4,
      "week": "2",
    },
    Object {
      "commits": 1,
      "date": "2017-05-16",
      "day": 2,
      "month": 4,
      "week": "2",
    },
    Object {
      "commits": 1,
      "date": "2017-05-17",
      "day": 3,
      "month": 4,
      "week": "2",
    },
    Object {
      "commits": 1,
      "date": "2017-05-18",
      "day": 4,
      "month": 4,
      "week": "2",
    },
    Object {
      "commits": 1,
      "date": "2017-05-19",
      "day": 5,
      "month": 4,
      "week": "2",
    },
    Object {
      "commits": 1,
      "date": "2017-05-20",
      "day": 6,
      "month": 4,
      "week": "2",
    },
    Object {
      "commits": 1,
      "date": "2017-05-21",
      "day": 0,
      "month": 4,
      "week": "3",
    },
    Object {
      "commits": 1,
      "date": "2017-05-22",
      "day": 1,
      "month": 4,
      "week": "3",
    },
    Object {
      "commits": 1,
      "date": "2017-05-23",
      "day": 2,
      "month": 4,
      "week": "3",
    },
    Object {
      "commits": 1,
      "date": "2017-05-24",
      "day": 3,
      "month": 4,
      "week": "3",
    },
    Object {
      "commits": 1,
      "date": "2017-05-25",
      "day": 4,
      "lastWeek": true,
      "month": 4,
      "week": "3",
    },
    Object {
      "commits": 1,
      "date": "2017-05-26",
      "day": 5,
      "lastWeek": true,
      "month": 4,
      "week": "3",
    },
    Object {
      "commits": 1,
      "date": "2017-05-27",
      "day": 6,
      "lastWeek": true,
      "month": 4,
      "week": "3",
    },
    Object {
      "commits": 1,
      "date": "2017-05-28",
      "day": 0,
      "lastWeek": true,
      "month": 4,
      "week": "4",
    },
    Object {
      "commits": 1,
      "date": "2017-05-29",
      "day": 1,
      "lastWeek": true,
      "month": 4,
      "week": "4",
    },
    Object {
      "commits": 1,
      "date": "2017-05-30",
      "day": 2,
      "lastWeek": true,
      "month": 4,
      "week": "4",
    },
    Object {
      "commits": 1,
      "date": "2017-05-31",
      "day": 3,
      "lastDay": true,
      "lastWeek": true,
      "month": 4,
      "week": "4",
    },
    Object {
      "commits": 1,
      "date": "2017-06-01",
      "day": 4,
      "month": 5,
      "week": "4",
    },
    Object {
      "commits": 1,
      "date": "2017-06-02",
      "day": 5,
      "month": 5,
      "week": "4",
    },
    Object {
      "commits": 1,
      "date": "2017-06-03",
      "day": 6,
      "month": 5,
      "week": "4",
    },
    Object {
      "commits": 1,
      "date": "2017-06-04",
      "day": 0,
      "month": 5,
      "week": "5",
    },
    Object {
      "commits": 1,
      "date": "2017-06-05",
      "day": 1,
      "month": 5,
      "week": "5",
    },
    Object {
      "commits": 1,
      "date": "2017-06-06",
      "day": 2,
      "month": 5,
      "week": "5",
    },
    Object {
      "commits": 1,
      "date": "2017-06-07",
      "day": 3,
      "month": 5,
      "week": "5",
    },
    Object {
      "commits": 1,
      "date": "2017-06-08",
      "day": 4,
      "month": 5,
      "week": "5",
    },
    Object {
      "commits": 1,
      "date": "2017-06-09",
      "day": 5,
      "month": 5,
      "week": "5",
    },
    Object {
      "commits": 1,
      "date": "2017-06-10",
      "day": 6,
      "month": 5,
      "week": "5",
    },
    Object {
      "commits": 1,
      "date": "2017-06-11",
      "day": 0,
      "month": 5,
      "week": "6",
    },
    Object {
      "commits": 1,
      "date": "2017-06-12",
      "day": 1,
      "month": 5,
      "week": "6",
    },
    Object {
      "commits": 1,
      "date": "2017-06-13",
      "day": 2,
      "month": 5,
      "week": "6",
    },
    Object {
      "commits": 1,
      "date": "2017-06-14",
      "day": 3,
      "month": 5,
      "week": "6",
    },
    Object {
      "commits": 1,
      "date": "2017-06-15",
      "day": 4,
      "month": 5,
      "week": "6",
    },
    Object {
      "commits": 1,
      "date": "2017-06-16",
      "day": 5,
      "month": 5,
      "week": "6",
    },
    Object {
      "commits": 1,
      "date": "2017-06-17",
      "day": 6,
      "month": 5,
      "week": "6",
    },
    Object {
      "commits": 1,
      "date": "2017-06-18",
      "day": 0,
      "month": 5,
      "week": "7",
    },
    Object {
      "commits": 1,
      "date": "2017-06-19",
      "day": 1,
      "month": 5,
      "week": "7",
    },
    Object {
      "commits": 1,
      "date": "2017-06-20",
      "day": 2,
      "month": 5,
      "week": "7",
    },
    Object {
      "commits": 2,
      "date": "2017-06-21",
      "day": 3,
      "month": 5,
      "week": "7",
    },
    Object {
      "commits": 6,
      "date": "2017-06-22",
      "day": 4,
      "month": 5,
      "week": "7",
    },
    Object {
      "commits": 9,
      "date": "2017-06-23",
      "day": 5,
      "month": 5,
      "week": "7",
    },
    Object {
      "commits": 3,
      "date": "2017-06-24",
      "day": 6,
      "lastWeek": true,
      "month": 5,
      "week": "7",
    },
    Object {
      "commits": 3,
      "date": "2017-06-25",
      "day": 0,
      "lastWeek": true,
      "month": 5,
      "week": "8",
    },
    Object {
      "commits": 1,
      "date": "2017-06-26",
      "day": 1,
      "lastWeek": true,
      "month": 5,
      "week": "8",
    },
    Object {
      "commits": 7,
      "date": "2017-06-27",
      "day": 2,
      "lastWeek": true,
      "month": 5,
      "week": "8",
    },
    Object {
      "commits": 7,
      "date": "2017-06-28",
      "day": 3,
      "lastWeek": true,
      "month": 5,
      "week": "8",
    },
    Object {
      "commits": 12,
      "date": "2017-06-29",
      "day": 4,
      "lastWeek": true,
      "month": 5,
      "week": "8",
    },
    Object {
      "commits": 9,
      "date": "2017-06-30",
      "day": 5,
      "lastDay": true,
      "lastWeek": true,
      "month": 5,
      "week": "8",
    },
    Object {
      "commits": 4,
      "date": "2017-07-01",
      "day": 6,
      "month": 6,
      "week": "8",
    },
    Object {
      "commits": 1,
      "date": "2017-07-02",
      "day": 0,
      "month": 6,
      "week": "9",
    },
    Object {
      "commits": 2,
      "date": "2017-07-03",
      "day": 1,
      "month": 6,
      "week": "9",
    },
    Object {
      "commits": 7,
      "date": "2017-07-04",
      "day": 2,
      "month": 6,
      "week": "9",
    },
    Object {
      "commits": 6,
      "date": "2017-07-05",
      "day": 3,
      "month": 6,
      "week": "9",
    },
    Object {
      "commits": 1,
      "date": "2017-07-06",
      "day": 4,
      "month": 6,
      "week": "9",
    },
    Object {
      "commits": 6,
      "date": "2017-07-07",
      "day": 5,
      "month": 6,
      "week": "9",
    },
    Object {
      "commits": 1,
      "date": "2017-07-08",
      "day": 6,
      "month": 6,
      "week": "9",
    },
    Object {
      "commits": 1,
      "date": "2017-07-09",
      "day": 0,
      "month": 6,
      "week": "10",
    },
    Object {
      "commits": 1,
      "date": "2017-07-10",
      "day": 1,
      "month": 6,
      "week": "10",
    },
    Object {
      "commits": 8,
      "date": "2017-07-11",
      "day": 2,
      "month": 6,
      "week": "10",
    },
    Object {
      "commits": 5,
      "date": "2017-07-12",
      "day": 3,
      "month": 6,
      "week": "10",
    },
    Object {
      "commits": 7,
      "date": "2017-07-13",
      "day": 4,
      "month": 6,
      "week": "10",
    },
    Object {
      "commits": 4,
      "date": "2017-07-14",
      "day": 5,
      "month": 6,
      "week": "10",
    },
    Object {
      "commits": 4,
      "date": "2017-07-15",
      "day": 6,
      "month": 6,
      "week": "10",
    },
    Object {
      "commits": 2,
      "date": "2017-07-16",
      "day": 0,
      "month": 6,
      "week": "11",
    },
    Object {
      "commits": 1,
      "date": "2017-07-17",
      "day": 1,
      "month": 6,
      "week": "11",
    },
    Object {
      "commits": 10,
      "date": "2017-07-18",
      "day": 2,
      "month": 6,
      "week": "11",
    },
    Object {
      "commits": 14,
      "date": "2017-07-19",
      "day": 3,
      "month": 6,
      "week": "11",
    },
    Object {
      "commits": 6,
      "date": "2017-07-20",
      "day": 4,
      "month": 6,
      "week": "11",
    },
    Object {
      "commits": 1,
      "date": "2017-07-21",
      "day": 5,
      "month": 6,
      "week": "11",
    },
    Object {
      "commits": 6,
      "date": "2017-07-22",
      "day": 6,
      "month": 6,
      "week": "11",
    },
    Object {
      "commits": 1,
      "date": "2017-07-23",
      "day": 0,
      "month": 6,
      "week": "12",
    },
    Object {
      "commits": 1,
      "date": "2017-07-24",
      "day": 1,
      "month": 6,
      "week": "12",
    },
    Object {
      "commits": 1,
      "date": "2017-07-25",
      "day": 2,
      "lastWeek": true,
      "month": 6,
      "week": "12",
    },
    Object {
      "commits": 1,
      "date": "2017-07-26",
      "day": 3,
      "lastWeek": true,
      "month": 6,
      "week": "12",
    },
    Object {
      "commits": 9,
      "date": "2017-07-27",
      "day": 4,
      "lastWeek": true,
      "month": 6,
      "week": "12",
    },
    Object {
      "commits": 1,
      "date": "2017-07-28",
      "day": 5,
      "lastWeek": true,
      "month": 6,
      "week": "12",
    },
    Object {
      "commits": 15,
      "date": "2017-07-29",
      "day": 6,
      "lastWeek": true,
      "month": 6,
      "week": "12",
    },
    Object {
      "commits": 1,
      "date": "2017-07-30",
      "day": 0,
      "lastWeek": true,
      "month": 6,
      "week": "13",
    },
    Object {
      "commits": 1,
      "date": "2017-07-31",
      "day": 1,
      "lastDay": true,
      "lastWeek": true,
      "month": 6,
      "week": "13",
    },
    Object {
      "commits": 15,
      "date": "2017-08-01",
      "day": 2,
      "month": 7,
      "week": "13",
    },
    Object {
      "commits": 11,
      "date": "2017-08-02",
      "day": 3,
      "month": 7,
      "week": "13",
    },
    Object {
      "commits": 3,
      "date": "2017-08-03",
      "day": 4,
      "month": 7,
      "week": "13",
    },
    Object {
      "commits": 6,
      "date": "2017-08-04",
      "day": 5,
      "month": 7,
      "week": "13",
    },
    Object {
      "commits": 1,
      "date": "2017-08-05",
      "day": 6,
      "month": 7,
      "week": "13",
    },
    Object {
      "commits": 4,
      "date": "2017-08-06",
      "day": 0,
      "month": 7,
      "week": "14",
    },
    Object {
      "commits": 1,
      "date": "2017-08-07",
      "day": 1,
      "month": 7,
      "week": "14",
    },
    Object {
      "commits": 10,
      "date": "2017-08-08",
      "day": 2,
      "month": 7,
      "week": "14",
    },
    Object {
      "commits": 11,
      "date": "2017-08-09",
      "day": 3,
      "month": 7,
      "week": "14",
    },
    Object {
      "commits": 8,
      "date": "2017-08-10",
      "day": 4,
      "month": 7,
      "week": "14",
    },
    Object {
      "commits": 12,
      "date": "2017-08-11",
      "day": 5,
      "month": 7,
      "week": "14",
    },
    Object {
      "commits": 8,
      "date": "2017-08-12",
      "day": 6,
      "month": 7,
      "week": "14",
    },
    Object {
      "commits": 2,
      "date": "2017-08-13",
      "day": 0,
      "month": 7,
      "week": "15",
    },
    Object {
      "commits": 1,
      "date": "2017-08-14",
      "day": 1,
      "month": 7,
      "week": "15",
    },
    Object {
      "commits": 18,
      "date": "2017-08-15",
      "day": 2,
      "month": 7,
      "week": "15",
    },
    Object {
      "commits": 21,
      "date": "2017-08-16",
      "day": 3,
      "month": 7,
      "week": "15",
    },
    Object {
      "commits": 7,
      "date": "2017-08-17",
      "day": 4,
      "month": 7,
      "week": "15",
    },
    Object {
      "commits": 10,
      "date": "2017-08-18",
      "day": 5,
      "month": 7,
      "week": "15",
    },
    Object {
      "commits": 8,
      "date": "2017-08-19",
      "day": 6,
      "month": 7,
      "week": "15",
    },
    Object {
      "commits": 1,
      "date": "2017-08-20",
      "day": 0,
      "month": 7,
      "week": "16",
    },
    Object {
      "commits": 1,
      "date": "2017-08-21",
      "day": 1,
      "month": 7,
      "week": "16",
    },
    Object {
      "commits": 1,
      "date": "2017-08-22",
      "day": 2,
      "month": 7,
      "week": "16",
    },
    Object {
      "commits": 7,
      "date": "2017-08-23",
      "day": 3,
      "month": 7,
      "week": "16",
    },
    Object {
      "commits": 11,
      "date": "2017-08-24",
      "day": 4,
      "month": 7,
      "week": "16",
    },
    Object {
      "commits": 3,
      "date": "2017-08-25",
      "day": 5,
      "lastWeek": true,
      "month": 7,
      "week": "16",
    },
    Object {
      "commits": 3,
      "date": "2017-08-26",
      "day": 6,
      "lastWeek": true,
      "month": 7,
      "week": "16",
    },
    Object {
      "commits": 1,
      "date": "2017-08-27",
      "day": 0,
      "lastWeek": true,
      "month": 7,
      "week": "17",
    },
    Object {
      "commits": 2,
      "date": "2017-08-28",
      "day": 1,
      "lastWeek": true,
      "month": 7,
      "week": "17",
    },
    Object {
      "commits": 7,
      "date": "2017-08-29",
      "day": 2,
      "lastWeek": true,
      "month": 7,
      "week": "17",
    },
    Object {
      "commits": 20,
      "date": "2017-08-30",
      "day": 3,
      "lastWeek": true,
      "month": 7,
      "week": "17",
    },
    Object {
      "commits": 15,
      "date": "2017-08-31",
      "day": 4,
      "lastDay": true,
      "lastWeek": true,
      "month": 7,
      "week": "17",
    },
    Object {
      "commits": 1,
      "date": "2017-09-01",
      "day": 5,
      "month": 8,
      "week": "17",
    },
    Object {
      "commits": 4,
      "date": "2017-09-02",
      "day": 6,
      "month": 8,
      "week": "17",
    },
    Object {
      "commits": 1,
      "date": "2017-09-03",
      "day": 0,
      "month": 8,
      "week": "18",
    },
    Object {
      "commits": 1,
      "date": "2017-09-04",
      "day": 1,
      "month": 8,
      "week": "18",
    },
    Object {
      "commits": 8,
      "date": "2017-09-05",
      "day": 2,
      "month": 8,
      "week": "18",
    },
    Object {
      "commits": 6,
      "date": "2017-09-06",
      "day": 3,
      "month": 8,
      "week": "18",
    },
    Object {
      "commits": 5,
      "date": "2017-09-07",
      "day": 4,
      "month": 8,
      "week": "18",
    },
    Object {
      "commits": 1,
      "date": "2017-09-08",
      "day": 5,
      "month": 8,
      "week": "18",
    },
    Object {
      "commits": 25,
      "date": "2017-09-09",
      "day": 6,
      "month": 8,
      "week": "18",
    },
    Object {
      "commits": 1,
      "date": "2017-09-10",
      "day": 0,
      "month": 8,
      "week": "19",
    },
    Object {
      "commits": 1,
      "date": "2017-09-11",
      "day": 1,
      "month": 8,
      "week": "19",
    },
    Object {
      "commits": 1,
      "date": "2017-09-12",
      "day": 2,
      "month": 8,
      "week": "19",
    },
    Object {
      "commits": 9,
      "date": "2017-09-13",
      "day": 3,
      "month": 8,
      "week": "19",
    },
    Object {
      "commits": 1,
      "date": "2017-09-14",
      "day": 4,
      "month": 8,
      "week": "19",
    },
    Object {
      "commits": 1,
      "date": "2017-09-15",
      "day": 5,
      "month": 8,
      "week": "19",
    },
    Object {
      "commits": 4,
      "date": "2017-09-16",
      "day": 6,
      "month": 8,
      "week": "19",
    },
    Object {
      "commits": 1,
      "date": "2017-09-17",
      "day": 0,
      "month": 8,
      "week": "20",
    },
    Object {
      "commits": 1,
      "date": "2017-09-18",
      "day": 1,
      "month": 8,
      "week": "20",
    },
    Object {
      "commits": 4,
      "date": "2017-09-19",
      "day": 2,
      "month": 8,
      "week": "20",
    },
    Object {
      "commits": 8,
      "date": "2017-09-20",
      "day": 3,
      "month": 8,
      "week": "20",
    },
    Object {
      "commits": 10,
      "date": "2017-09-21",
      "day": 4,
      "month": 8,
      "week": "20",
    },
    Object {
      "commits": 9,
      "date": "2017-09-22",
      "day": 5,
      "month": 8,
      "week": "20",
    },
    Object {
      "commits": 5,
      "date": "2017-09-23",
      "day": 6,
      "month": 8,
      "week": "20",
    },
    Object {
      "commits": 1,
      "date": "2017-09-24",
      "day": 0,
      "lastWeek": true,
      "month": 8,
      "week": "21",
    },
    Object {
      "commits": 1,
      "date": "2017-09-25",
      "day": 1,
      "lastWeek": true,
      "month": 8,
      "week": "21",
    },
    Object {
      "commits": 1,
      "date": "2017-09-26",
      "day": 2,
      "lastWeek": true,
      "month": 8,
      "week": "21",
    },
    Object {
      "commits": 7,
      "date": "2017-09-27",
      "day": 3,
      "lastWeek": true,
      "month": 8,
      "week": "21",
    },
    Object {
      "commits": 13,
      "date": "2017-09-28",
      "day": 4,
      "lastWeek": true,
      "month": 8,
      "week": "21",
    },
    Object {
      "commits": 1,
      "date": "2017-09-29",
      "day": 5,
      "lastWeek": true,
      "month": 8,
      "week": "21",
    },
    Object {
      "commits": 7,
      "date": "2017-09-30",
      "day": 6,
      "lastWeek": true,
      "month": 8,
      "week": "21",
    },
    Object {
      "commits": 1,
      "date": "2017-10-01",
      "day": 0,
      "month": 9,
      "week": "22",
    },
    Object {
      "commits": 1,
      "date": "2017-10-02",
      "day": 1,
      "month": 9,
      "week": "22",
    },
    Object {
      "commits": 7,
      "date": "2017-10-03",
      "day": 2,
      "month": 9,
      "week": "22",
    },
    Object {
      "commits": 2,
      "date": "2017-10-04",
      "day": 3,
      "month": 9,
      "week": "22",
    },
    Object {
      "commits": 14,
      "date": "2017-10-05",
      "day": 4,
      "month": 9,
      "week": "22",
    },
    Object {
      "commits": 9,
      "date": "2017-10-06",
      "day": 5,
      "month": 9,
      "week": "22",
    },
    Object {
      "commits": 12,
      "date": "2017-10-07",
      "day": 6,
      "month": 9,
      "week": "22",
    },
    Object {
      "commits": 1,
      "date": "2017-10-08",
      "day": 0,
      "month": 9,
      "week": "23",
    },
    Object {
      "commits": 1,
      "date": "2017-10-09",
      "day": 1,
      "month": 9,
      "week": "23",
    },
    Object {
      "commits": 13,
      "date": "2017-10-10",
      "day": 2,
      "month": 9,
      "week": "23",
    },
    Object {
      "commits": 12,
      "date": "2017-10-11",
      "day": 3,
      "month": 9,
      "week": "23",
    },
    Object {
      "commits": 1,
      "date": "2017-10-12",
      "day": 4,
      "month": 9,
      "week": "23",
    },
    Object {
      "commits": 1,
      "date": "2017-10-13",
      "day": 5,
      "month": 9,
      "week": "23",
    },
    Object {
      "commits": 1,
      "date": "2017-10-14",
      "day": 6,
      "month": 9,
      "week": "23",
    },
    Object {
      "commits": 1,
      "date": "2017-10-15",
      "day": 0,
      "month": 9,
      "week": "24",
    },
    Object {
      "commits": 1,
      "date": "2017-10-16",
      "day": 1,
      "month": 9,
      "week": "24",
    },
    Object {
      "commits": 1,
      "date": "2017-10-17",
      "day": 2,
      "month": 9,
      "week": "24",
    },
    Object {
      "commits": 1,
      "date": "2017-10-18",
      "day": 3,
      "month": 9,
      "week": "24",
    },
    Object {
      "commits": 1,
      "date": "2017-10-19",
      "day": 4,
      "month": 9,
      "week": "24",
    },
    Object {
      "commits": 1,
      "date": "2017-10-20",
      "day": 5,
      "month": 9,
      "week": "24",
    },
    Object {
      "commits": 1,
      "date": "2017-10-21",
      "day": 6,
      "month": 9,
      "week": "24",
    },
    Object {
      "commits": 1,
      "date": "2017-10-22",
      "day": 0,
      "month": 9,
      "week": "25",
    },
    Object {
      "commits": 1,
      "date": "2017-10-23",
      "day": 1,
      "month": 9,
      "week": "25",
    },
    Object {
      "commits": 10,
      "date": "2017-10-24",
      "day": 2,
      "month": 9,
      "week": "25",
    },
    Object {
      "commits": 4,
      "date": "2017-10-25",
      "day": 3,
      "month": 9,
      "week": "25",
    },
    Object {
      "commits": 7,
      "date": "2017-10-26",
      "day": 4,
      "month": 9,
      "week": "25",
    },
    Object {
      "commits": 3,
      "date": "2017-10-27",
      "day": 5,
      "month": 9,
      "week": "25",
    },
    Object {
      "commits": 14,
      "date": "2017-10-28",
      "day": 6,
      "month": 9,
      "week": "25",
    },
    Object {
      "commits": 1,
      "date": "2017-10-29",
      "day": 0,
      "month": 9,
      "week": "26",
    },
    Object {
      "commits": 1,
      "date": "2017-10-30",
      "day": 1,
      "month": 9,
      "week": "26",
    },
    Object {
      "commits": 5,
      "date": "2017-10-31",
      "day": 2,
      "lastDay": true,
      "month": 9,
      "week": "26",
    },
  ],
  "dateField": "date",
  "legend": false,
  "meta": Object {
    "day": Object {
      "type": "cat",
    },
  },
  "reflect": "y",
  "renderer": "canvas",
  "shape": "boundary-polygon",
  "type": "polygon",
  "xAxis": Object {
    "grid": Object {
      "alignTick": false,
      "line": Object {
        "style": Object {
          "lineDash": null,
          "lineWidth": 1,
          "stroke": "#f0f0f0",
        },
      },
    },
    "label": Object {
      "autoHide": Object {
        "cfg": Object {
          "minGap": 6,
        },
        "type": "equidistance",
      },
      "autoRotate": false,
    },
    "line": null,
    "nice": true,
    "tickLine": null,
  },
  "xField": "week",
  "yAxis": Object {
    "grid": Object {
      "alignTick": false,
      "line": Object {
        "style": Object {
          "lineDash": null,
          "lineWidth": 1,
          "stroke": "#f0f0f0",
        },
      },
    },
    "label": Object {
      "autoHide": true,
      "autoRotate": false,
    },
    "nice": true,
  },
  "yField": "day",
}
`;
